2013-10-28  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/Tools.pm: Added exeptions in safe_input
	and safe_output to avoid differences with the console condification
	with single and double quotes. Incident #309
	Merged from 4.1

2013-10-28 Hirofumi Kosaka <kosaka@rworks.jp>

	* lib/PandoraFMS/Core.pm: Added _timezone_ alert macro.

2013-10-22 Hirofumi Kosaka <kosaka@rworks.jp>

	* util/pandora_migrate_plugins.pl: Added optional command-line	
	argument 'dbport' for people who use non-standard DB port.

2013-10-22 Hirofumi Kosaka <kosaka@rworks.jp>

	* lib/PandoraFMS/Core.pm: Fixed missing macro replacing in
	async modules' event description.

2013-10-14  Junichi Satoh <junichi@rworks.jp>

	* NetBSD/pandora_server.conf: Updated default settings as the same
	as Linux ones.

2013-10-09  Junichi Satoh <junichi@rworks.jp>

	* lib/PandoraFMS/Tools.pm: Fixed ping monitoring failure on NetBSD.
	Contributed by Hiroki SHIMIZU. Thanks!

2013-10-08  Junichi Satoh <junichi@rworks.jp>

	* pandora_server_installer: Added p5-JSON to description for FreeBSD.

2013-10-07  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_manage.pl: Fixed data_module feature adding the data
	to be inserted into parameter list. The retro-compatibility has been 
	broken, but this feature was useless, so it shouldnt be a problem.

2013-09-29  Junichi Satoh <junichi@rworks.jp>

	* FreeBSD/pandora_server.conf: Updated default settings as the same
	as Linux ones.

2013-09-24  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/WMIServer.pm: Some HTML entities were not being
	  decoded.

	* lib/PandoraFMS/Core.pm: Set the severity or alert recovery events to
	  NORMAL.

2013-09-22  Junichi Satoh <junichi@rworks.jp>

	* bin/tentacle_server: Upgraded to 0.4.0. (Imported from trunk of
	tentacled repository.)
	Added support for IPv6 and improved to be able to bind multiple
	interfaces and/or IP addresses.
	Added support for 'TCP Wrappers'. When the 'Authen::Libwrap' is