@@ -1,5 +1,10 @@
 2013-10-28  Sergio Martin <sergio.martin@artica.es>
 
+	* lib/PandoraFMS/DataServer.pm: Add check to update
+	adopted unlinked data modules
+
+2013-10-28  Sergio Martin <sergio.martin@artica.es>
+
 	* lib/PandoraFMS/Tools.pm: Added exeptions in safe_input
 	and safe_output to avoid differences with the console condification
 	with single and double quotes. Incident #309
